--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
-
   </head>
   <body>
-
     <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom">
       <div class="container">
         <a class="navbar-brand fw-bold" href="index.html">CampusLearn<span class="text-primary">™</span></a>
@@ -34,62 +32,164 @@
     </nav>
 
     <main class="container my-4">
-
-<div class="p-5 mb-4 bg-light rounded-3">
-  <div class="container-fluid py-5">
-    <h1 class="display-5 fw-bold">Empowering Student Success Through Peer‑Powered Learning</h1>
-    <p class="col-md-8 fs-5">CampusLearn™ connects Belgium Campus students with approved peer tutors for BCom, BIT and Diploma modules. Get help anytime — via topics, forums, resources and private messaging.</p>
-    <a class="btn btn-primary btn-lg" href="/pages/register.html">Get Started</a>
-    <a class="btn btn-outline-secondary btn-lg" href="/pages/forum.html">Ask the Forum</a>
-  </div>
-</div>
-
-<section class="row g-4">
-  <div class="col-md-4">
-    <div class="card h-100">
-      <div class="card-body">
-        <h5 class="card-title"><i class="fa-solid fa-user-plus me-2"></i>Join as Student</h5>
-        <p>Create a profile, subscribe to topics, ask questions, and track tutor responses.</p>
-        <a href="/pages/register.html" class="btn btn-primary btn-sm">Create account</a>
+      <div class="p-5 mb-4 bg-light rounded-3">
+        <div class="container-fluid py-5">
+          <h1 class="display-5 fw-bold">Empowering Student Success Through Peer‑Powered Learning</h1>
+          <p class="col-md-8 fs-5">CampusLearn™ connects Belgium Campus students with approved peer tutors for BCom, BIT and Diploma modules. Get help anytime — via topics, forums, resources and private messaging.</p>
+          <a class="btn btn-primary btn-lg" href="/pages/register.html">Get Started</a>
+          <a class="btn btn-outline-secondary btn-lg" href="/pages/forum.html">Ask the Forum</a>
+        </div>
       </div>
-    </div>
-  </div>
-  <div class="col-md-4">
-    <div class="card h-100">
-      <div class="card-body">
-        <h5 class="card-title"><i class="fa-solid fa-chalkboard-user me-2"></i>Become a Tutor</h5>
-        <p>Apply to tutor modules you are registered for, upload resources, and help peers succeed.</p>
-        <a href="/pages/tutor-dashboard.html" class="btn btn-outline-primary btn-sm">Tutor console</a>
-      </div>
-    </div>
-  </div>
-  <div class="col-md-4">
-    <div class="card h-100">
-      <div class="card-body">
-        <h5 class="card-title"><i class="fa-regular fa-comments me-2"></i>Public Forum</h5>
-        <p>Ask anonymously, upvote helpful answers, and explore trending questions.</p>
-        <a href="/pages/forum.html" class="btn btn-outline-secondary btn-sm">Open forum</a>
-      </div>
-    </div>
-  </div>
-</section>
 
-<section class="mt-5">
-  <h2 class="h4 mb-3">How it works</h2>
-  <ol class="list-group list-group-numbered">
-    <li class="list-group-item">Register with your <code>@belgiumcampus.ac.za</code> email and complete your profile.</li>
-    <li class="list-group-item">Create or subscribe to module topics that you need help with.</li>
-    <li class="list-group-item">Ask a question — tutors for that module get notified instantly.</li>
-    <li class="list-group-item">Get answers, resources, and private guidance when needed.</li>
-  </ol>
-</section>
+      <section class="row g-4" id="clFeatures">
+        <div class="col-md-4">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title"><i class="fa-solid fa-user-plus me-2"></i>Join as Student</h5>
+              <p>Create a profile, subscribe to topics, ask questions, and track tutor responses.</p>
+              <a href="/pages/register.html" class="btn btn-primary btn-sm">Create account</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title"><i class="fa-solid fa-chalkboard-user me-2"></i>Become a Tutor</h5>
+              <p>Apply to tutor modules you are registered for, upload resources, and help peers succeed.</p>
+              <a href="/pages/tutor-dashboard.html" class="btn btn-outline-primary btn-sm">Tutor console</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title"><i class="fa-regular fa-comments me-2"></i>Public Forum</h5>
+              <p>Ask anonymously, upvote helpful answers, and explore trending questions.</p>
+              <a href="/pages/forum.html" class="btn btn-outline-secondary btn-sm">Open forum</a>
+            </div>
+          </div>
+        </div>
+      </section>
 
-<section class="mt-5">
-  <div class="alert alert-info" role="alert">
-    <strong>AI Tutor Assistant (Preview):</strong> A Microsoft Copilot Studio chatbot can be embedded here to answer FAQs, recommend resources, and escalate to tutors when unsure.
-  </div>
-</section>
+      <section class="mt-5" id="clFeaturedTutors">
+        <h2 class="h4 mb-3">Meet Our Top Tutors</h2>
+        <div class="row g-4">
+          <div class="col-md-3">
+            <div class="card h-100">
+              <img src="https://plus.unsplash.com/premium_photo-1682096410067-6073d1f558fe?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="Tutor Sarah M.">
+              <div class="card-body">
+                <h5 class="card-title">Sarah M.</h5>
+                <p class="card-text">BIT Year 2, specializing in Programming & Database Systems.</p>
+                <a href="/pages/tutor-profile.html?id=1" class="btn btn-outline-primary btn-sm">View Profile</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card h-100">
+              <img src="https://images.unsplash.com/photo-1723612102452-e8419d280ea9?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="Tutor James K.">
+              <div class="card-body">
+                <h5 class="card-title">Mandy K.</h5>
+                <p class="card-text">BCom Year 3, expert in Financial Management.</p>
+                <a href="/pages/tutor-profile.html?id=2" class="btn btn-outline-primary btn-sm">View Profile</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card h-100">
+              <img src="https://plus.unsplash.com/premium_photo-1723575669052-c6fceafc6fa8?q=80&w=1154&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="Tutor Lerato N.">
+              <div class="card-body">
+                <h5 class="card-title">Olivia N.</h5>
+                <p class="card-text">Diploma in IT, skilled in Network Security.</p>
+                <a href="/pages/tutor-profile.html?id=3" class="btn btn-outline-primary btn-sm">View Profile</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card h-100">
+              <img src="https://images.unsplash.com/photo-1568602471122-7832951cc4c5?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="Tutor Michael T.">
+              <div class="card-body">
+                <h5 class="card-title">Michael T.</h5>
+                <p class="card-text">BIT Year 3, adept at Web Development.</p>
+                <a href="/pages/tutor-profile.html?id=4" class="btn btn-outline-primary btn-sm">View Profile</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
+      <section class="mt-5" id="clPopularTopics">
+        <h2 class="h4 mb-3">Popular Topics</h2>
+        <div class="row g-4">
+          <div class="col-md-6">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Introduction to Programming</h5>
+                <p class="card-text">Discuss Python, Java, and C++ fundamentals with 120+ active threads.</p>
+                <a href="/pages/topics.html?topic=programming" class="btn btn-outline-secondary btn-sm">Join Discussion</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Financial Accounting</h5>
+                <p class="card-text">Explore balance sheets, ledgers, and more with 80+ active threads.</p>
+                <a href="/pages/topics.html?topic=accounting" class="btn btn-outline-secondary btn-sm">Join Discussion</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="mt-5" id="clTestimonials">
+        <h2 class="h4 mb-3">What Students Say</h2>
+        <div class="row g-4">
+          <div class="col-md-4">
+            <blockquote class="blockquote p-3 bg-light rounded">
+              <p>"CampusLearn helped me ace my Programming module with real-time tutor support!"</p>
+              <footer class="blockquote-footer">Emma L., BIT Student</footer>
+            </blockquote>
+          </div>
+          <div class="col-md-4">
+            <blockquote class="blockquote p-3 bg-light rounded">
+              <p>"The forum is a lifesaver for quick answers, and the resources are top-notch."</p>
+              <footer class="blockquote-footer">Thabo S., BCom Student</footer>
+            </blockquote>
+          </div>
+          <div class="col-md-4">
+            <blockquote class="blockquote p-3 bg-light rounded">
+              <p>"Being a tutor on CampusLearn is rewarding and improved my own understanding."</p>
+              <footer class="blockquote-footer">Aisha R., Diploma Student</footer>
+            </blockquote>
+          </div>
+        </div>
+      </section>
+
+      <section class="mt-5" id="clHowItWorks">
+        <h2 class="h4 mb-3">How it works</h2>
+        <ol class="list-group list-group-numbered">
+          <li class="list-group-item">Register with your <code>@belgiumcampus.ac.za</code> email and complete your profile.</li>
+          <li class="list-group-item">Create or subscribe to module topics that you need help with.</li>
+          <li class="list-group-item">Ask a question — tutors for that module get notified instantly.</li>
+          <li class="list-group-item">Get answers, resources, and private guidance when needed.</li>
+        </ol>
+      </section>
+
+      <section class="mt-5" id="clQuickLinks">
+        <h2 class="h4 mb-3">Quick Links</h2>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item"><a href="/pages/support.html">Contact Support</a></li>
+          <li class="list-group-item"><a href="/pages/privacy.html">Privacy Policy</a></li>
+          <li class="list-group-item"><a href="/pages/terms.html">Terms of Service</a></li>
+          <li class="list-group-item"><a href="/pages/about.html">About CampusLearn</a></li>
+        </ul>
+      </section>
+
+      <section class="mt-5" id="clAITutor">
+        <div class="alert alert-info" role="alert">
+          <strong>AI Tutor Assistant (Preview):</strong> A Microsoft Copilot Studio chatbot can be embedded here to answer FAQs, recommend resources, and escalate to tutors when unsure.
+        </div>
+      </section>
     </main>
 
     <footer class="mt-5 py-4 border-top">
@@ -101,6 +201,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/app.js"></script>
-
   </body>
 </html>
