--- a/index.html
+++ b/index.html
@@ -7,6 +7,69 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
+    <style>
+      .bg-darkened::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5); /* Darkening overlay */
+        z-index: 1;
+        border-radius: 15px; /* Rounded corners */
+      }
+      .bg-darkened {
+        position: relative;
+        background-image: url('https://images.unsplash.com/photo-1528980917907-8df7f48f6f2a?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+        background-size: contain; /* Show full image */
+        background-position: center;
+        background-repeat: no-repeat;
+        backdrop-filter: blur(10px);
+        border-radius: 15px; /* Rounded corners */
+      }
+      .bg-darkened .container-fluid {
+        position: relative;
+        z-index: 2; /* Ensure content is above the overlay */
+      }
+      .bg-darkened .container-fluid h1,
+      .bg-darkened .container-fluid p {
+        color: #F5F5F5; /* Smooth off-white text color */
+      }
+      .bg-darkened .container-fluid .btn-primary,
+      .bg-darkened .container-fluid .btn-outline-secondary {
+        color: #F5F5F5; /* Match button text color to off-white */
+        border-color: #F5F5F5; /* Ensure outline button border is visible */
+      }
+      .bg-darkened .container-fluid .btn-primary {
+        background-color: #0052cc; /* Slightly darker primary button for contrast */
+        border-color: #0052cc;
+      }
+      .bg-darkened .container-fluid .btn-outline-secondary:hover {
+        background-color: rgba(245, 245, 245, 0.2); /* Subtle hover effect */
+        color: #F5F5F5;
+      }
+      #clTestimonials .blockquote {
+        height: 180px; /* Height to fit all content */
+        overflow: hidden; /* Handle overflow content */
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+      }
+      #clTestimonials .blockquote-footer {
+        display: flex;
+        align-items: center;
+        gap: 10px; /* Space between image and text */
+        margin-top: 15px; /* Space between comment content and footer */
+        margin-bottom: 10px; /* Added space below footer */
+      }
+      #clTestimonials .profile-pic {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%; /* Circular profile picture */
+        object-fit: cover;
+      }
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom">
@@ -32,7 +95,7 @@
     </nav>
 
     <main class="container my-4">
-      <div class="p-5 mb-4 bg-light rounded-3">
+      <div class="p-5 mb-4 bg-light bg-darkened">
         <div class="container-fluid py-5">
           <h1 class="display-5 fw-bold">Empowering Student Success Through Peer‑Powered Learning</h1>
           <p class="col-md-8 fs-5">CampusLearn™ connects Belgium Campus students with approved peer tutors for BCom, BIT and Diploma modules. Get help anytime — via topics, forums, resources and private messaging.</p>
@@ -147,19 +210,28 @@
           <div class="col-md-4">
             <blockquote class="blockquote p-3 bg-light rounded">
               <p>"CampusLearn helped me ace my Programming module with real-time tutor support!"</p>
-              <footer class="blockquote-footer">Emma L., BIT Student</footer>
+              <footer class="blockquote-footer">
+                <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?q=80&w=40&auto=format&fit=crop" class="profile-pic" alt="Emma L.">
+                Emma L., BIT Student
+              </footer>
             </blockquote>
           </div>
           <div class="col-md-4">
             <blockquote class="blockquote p-3 bg-light rounded">
-              <p>"The forum is a lifesaver for quick answers, and the resources are top-notch."</p>
-              <footer class="blockquote-footer">Thabo S., BCom Student</footer>
+              <p>"The forum is a lifesaver for quick answers, and the resources are top-notch. Happy to be here"</p>
+              <footer class="blockquote-footer">
+                <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?q=80&w=40&auto=format&fit=crop" class="profile-pic" alt="Thabo S.">
+                Thabo S., BCom Student
+              </footer>
             </blockquote>
           </div>
           <div class="col-md-4">
             <blockquote class="blockquote p-3 bg-light rounded">
               <p>"Being a tutor on CampusLearn is rewarding and improved my own understanding."</p>
-              <footer class="blockquote-footer">Aisha R., Diploma Student</footer>
+              <footer class="blockquote-footer">
+                <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?q=80&w=40&auto=format&fit=crop" class="profile-pic" alt="Aisha R.">
+                Aisha R., Diploma Student
+              </footer>
             </blockquote>
           </div>
         </div>
