Added a sticky header for 3 of the pages and added some styling to login and registration

--- a/index.html
+++ b/index.html
@@ -71,27 +71,28 @@
     </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom sticky-top">
       <div class="container">
-        <a class="navbar-brand fw-bold" href="index.html">CampusLearn<span class="text-primary">™</span></a>
+        <a class="navbar-brand fw-bold" href="../index.html">CampusLearn<span class="text-primary">™</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#clNav" aria-controls="clNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="clNav">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link" href="/pages/topics.html">Topics</a></li>
-            <li class="nav-item"><a class="nav-link" href="/pages/forum.html">Forum</a></li>
-            <li class="nav-item"><a class="nav-link" href="/pages/resources.html">Resources</a></li>
-            <li class="nav-item"><a class="nav-link" href="/pages/faq.html">FAQ</a></li>
-            <li class="nav-item"><a class="nav-link" href="/pages/messages.html">Messages</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/topics.html">Topics</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/forum.html">Forum</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/resources.html">Resources</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/faq.html">FAQ</a></li>
+            <li class="nav-item"><a class="nav-link" href="pages/messages.html">Messages</a></li>
           </ul>
           <div class="d-flex gap-2">
-            <a href="/pages/login.html" class="btn btn-outline-primary btn-sm">Log in</a>
-            <a href="/pages/register.html" class="btn btn-primary btn-sm">Register</a>
+            <a href="pages/login.html" class="btn btn-outline-primary btn-sm">Log in</a>
+            <a href="pages/register.html" class="btn btn-primary btn-sm">Register</a>
           </div>
         </div>
       </div>
     </nav>
+
 
     <main class="container my-4">
       <div class="p-5 mb-4 bg-light bg-darkened">
