--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Home • CampusLearn™</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
+    <link rel="icon" href="https://icons8.com/icon/79387/graduation-cap" type="image/x-icon">
     <link href="assets/css/styles.css" rel="stylesheet">
     <style>
       .bg-darkened::before {
