--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
     <link rel="icon" href="https://icons8.com/icon/79387/graduation-cap" type="image/x-icon">
     <link href="assets/css/styles.css" rel="stylesheet">
+    <link rel="icon" href="assets/images/Favicon.png" type="image/x-icon">
     <style>
       .bg-darkened::before {
         content: '';
