--- a/pages/login.html
+++ b/pages/login.html
@@ -6,6 +6,7 @@
     <title>Login • CampusLearn™</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
+    <link rel="icon" href="assets/images/Favicon.png" type="image/x-icon">
     <style>
       body {
         background-color: #f5f7fa;
