Added the final styling in Register too, uniformity

--- a/pages/register.html
+++ b/pages/register.html
@@ -9,12 +9,14 @@
     <link rel="icon" href="/assets/images/Favicon.png" type="image/x-icon">
     <style>
       body {
-        background-color: #f5f7fa;
+        background-image: url('https://www.transparenttextures.com/patterns/cubes.png'), url('https://img.freepik.com/premium-vector/hand-drawn-set-elements-abstract-arrows-ribbons-hearts-stars-crowns-monsters-other-elements-hand-drawn-style-concept-design-scribble-illustration-vector-illustration_607987-917.jpg');
         min-height: 100vh;
         display: flex;
         flex-direction: column;
-        margin: 0;
-        padding: 0;
+        background-blend-mode: overlay;
+        background-size: auto, cover;
+        background-repeat: repeat, no-repeat;
+        background-color: #f5f7fa;
       }
       nav {
         z-index: 10;
