--- a/pages/topics.html
+++ b/pages/topics.html
@@ -7,13 +7,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
-
+    <link rel="icon" href="/assets/images/Favicon.png" type="image/x-icon">
+    <style>
+      body {
+        background-image: url('https://www.transparenttextures.com/patterns/cubes.png'), url('https://img.freepik.com/premium-vector/hand-drawn-set-elements-abstract-arrows-ribbons-hearts-stars-crowns-monsters-other-elements-hand-drawn-style-concept-design-scribble-illustration-vector-illustration_607987-917.jpg');
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        background-blend-mode: overlay;
+        background-size: auto, cover;
+        background-repeat: repeat, no-repeat;
+        background-color: #f5f7fa;
+      }
+    </style>
   </head>
   <body>
-
-    <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom sticky-top">
       <div class="container">
-        <a class="navbar-brand fw-bold" href="index.html">CampusLearn<span class="text-primary">™</span></a>
+        <a class="navbar-brand fw-bold" href="../index.html">CampusLearn<span class="text-primary">™</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#clNav" aria-controls="clNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -34,75 +45,205 @@
     </nav>
 
     <main class="container my-4">
+      <section id="clSearchFilter" class="mb-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Search Topics</h5>
+            <form class="row g-3">
+              <div class="col-md-6">
+                <input type="text" class="form-control" placeholder="Search by module or keyword (e.g., SE202, UML)">
+              </div>
+              <div class="col-md-3">
+                <select class="form-select">
+                  <option value="">All Statuses</option>
+                  <option value="open">Open</option>
+                  <option value="resolved">Resolved</option>
+                </select>
+              </div>
+              <div class="col-md-3">
+                <button type="submit" class="btn btn-primary w-100">Search</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </section>
 
-<div class="d-flex align-items-center justify-content-between mb-3">
-  <h1 class="h4">Help Topics</h1>
-  <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newTopicModal"><i class="fa fa-plus me-2"></i>New Topic</button>
-</div>
-<div class="row g-3">
-  <div class="col-md-4">
-    <div class="card h-100">
-      <div class="card-body">
-        <h5 class="card-title">SE202 • Software Engineering</h5>
-        <p class="card-text small">UML, agile, testing</p>
-        <a href="topic-detail.html" class="btn btn-outline-primary btn-sm">Open</a>
-        <button class="btn btn-outline-secondary btn-sm ms-2">Subscribe</button>
+      <div class="d-flex align-items-center justify-content-between mb-3">
+        <h1 class="h4">Help Topics</h1>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newTopicModal"><i class="fa fa-plus me-2"></i>New Topic</button>
       </div>
-    </div>
-  </div>
-  <div class="col-md-4">
-    <div class="card h-100">
-      <div class="card-body">
-        <h5 class="card-title">DB101 • Databases</h5>
-        <p class="card-text small">SQL, normalization, indexing</p>
-        <a href="topic-detail.html" class="btn btn-outline-primary btn-sm">Open</a>
-        <button class="btn btn-outline-secondary btn-sm ms-2">Subscribe</button>
-      </div>
-    </div>
-  </div>
-  <div class="col-md-4">
-    <div class="card h-100">
-      <div class="card-body">
-        <h5 class="card-title">ITM300 • Project Management</h5>
-        <p class="card-text small">Scheduling, risks, budgeting</p>
-        <a href="topic-detail.html" class="btn btn-outline-primary btn-sm">Open</a>
-        <button class="btn btn-outline-secondary btn-sm ms-2">Subscribe</button>
-      </div>
-    </div>
-  </div>
-</div>
 
-<!-- New Topic Modal -->
-<div class="modal fade" id="newTopicModal" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Create a new topic</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <form class="row g-3">
+      <section id="clPopularTopics" class="mb-4">
+        <h2 class="h5 mb-3">Popular Topics</h2>
+        <div id="popularTopicsCarousel" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">CS101 • Python Basics</h5>
+                  <p class="card-text small">Loops, functions, data structures • 150 subscribers</p>
+                  <a href="topic-detail.html?id=4" class="btn btn-outline-primary btn-sm">Open</a>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">FM201 • Financial Management</h5>
+                  <p class="card-text small">Budgeting, forecasting • 120 subscribers</p>
+                  <a href="topic-detail.html?id=5" class="btn btn-outline-primary btn-sm">Open</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#popularTopicsCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#popularTopicsCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </section>
+
+      <section id="clSubscribedTopics" class="mb-4">
+        <h2 class="h5 mb-3">My Subscribed Topics</h2>
+        <div class="row g-3">
           <div class="col-md-6">
-            <label class="form-label">Module</label>
-            <input class="form-control" placeholder="e.g., SE202">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">SE202 • Sequence Diagrams</h5>
+                <p class="card-text small">UML, lifelines • 3 new replies</p>
+                <a href="topic-detail.html?id=1" class="btn btn-outline-primary btn-sm">Open</a>
+              </div>
+            </div>
           </div>
           <div class="col-md-6">
-            <label class="form-label">Topic Title</label>
-            <input class="form-control" placeholder="e.g., Sequence Diagrams">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">DB101 • SQL Queries</h5>
+                <p class="card-text small">Joins, subqueries • 1 new reply</p>
+                <a href="topic-detail.html?id=2" class="btn btn-outline-primary btn-sm">Open</a>
+              </div>
+            </div>
           </div>
-          <div class="col-12">
-            <label class="form-label">Description</label>
-            <textarea class="form-control" rows="3" placeholder="What help do you need?"></textarea>
-          </div>
-          <div class="col-12">
-            <button type="submit" class="btn btn-primary">Create & Broadcast</button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
+        </div>
+      </section>
 
+      <section id="clAllTopics" class="mb-4">
+        <h2 class="h5 mb-3">All Topics</h2>
+        <div class="row g-3">
+          <div class="col-md-4">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">SE202 • Software Engineering</h5>
+                <p class="card-text small">UML, agile, testing • 24 subscribers</p>
+                <a href="topic-detail.html" class="btn btn-outline-primary btn-sm">Open</a>
+                <button class="btn btn-outline-secondary btn-sm ms-2">Subscribe</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">DB101 • Databases</h5>
+                <p class="card-text small">SQL, normalization, indexing • 18 subscribers</p>
+                <a href="topic-detail.html" class="btn btn-outline-primary btn-sm">Open</a>
+                <button class="btn btn-outline-secondary btn-sm ms-2">Subscribe</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">ITM300 • Project Management</h5>
+                <p class="card-text small">Scheduling, risks, budgeting • 15 subscribers</p>
+                <a href="topic-detail.html" class="btn btn-outline-primary btn-sm">Open</a>
+                <button class="btn btn-outline-secondary btn-sm ms-2">Subscribe</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="clTopicStats" class="mb-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Topic Statistics</h5>
+            <p class="card-text small">
+              <strong>Total Topics:</strong> 48 | <strong>Active Tutors:</strong> 12 | <strong>Replies Today:</strong> 25
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section id="clRecommendedTutors" class="mb-4">
+        <h2 class="h5 mb-3">Recommended Tutors</h2>
+        <div class="row g-3">
+          <div class="col-md-4">
+            <div class="card h-100">
+              <img src="https://images.unsplash.com/photo-1603415526960-f7e0328c63b1?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1170" class="card-img-top" alt="Tutor A">
+              <div class="card-body">
+                <h5 class="card-title">Tutor A</h5>
+                <p class="card-text small">Specializes in Software Engineering</p>
+                <a href="tutor-profile.html?id=1" class="btn btn-outline-primary btn-sm">View Profile</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card h-100">
+              <img src="https://images.unsplash.com/photo-1602859520219-e76e1f272d60?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1170" class="card-img-top" alt="Tutor B">
+              <div class="card-body">
+                <h5 class="card-title">Tutor B</h5>
+                <p class="card-text small">Expert in Database Systems</p>
+                <a href="tutor-profile.html?id=2" class="btn btn-outline-primary btn-sm">View Profile</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card h-100">
+              <img src="https://images.unsplash.com/photo-1586009557176-3b3e22c3f616?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1170" class="card-img-top" alt="Tutor C">
+              <div class="card-body">
+                <h5 class="card-title">Tutor C</h5>
+                <p class="card-text small">Skilled in Project Management</p>
+                <a href="tutor-profile.html?id=3" class="btn btn-outline-primary btn-sm">View Profile</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- New Topic Modal -->
+      <div class="modal fade" id="newTopicModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Create a New Topic</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <form class="row g-3">
+                <div class="col-md-6">
+                  <label class="form-label">Module</label>
+                  <input class="form-control" placeholder="e.g., SE202">
+                </div>
+                <div class="col-md-6">
+                  <label class="form-label">Topic Title</label>
+                  <input class="form-control" placeholder="e.g., Sequence Diagrams">
+                </div>
+                <div class="col-12">
+                  <label class="form-label">Description</label>
+                  <textarea class="form-control" rows="3" placeholder="What help do you need?"></textarea>
+                </div>
+                <div class="col-12">
+                  <button type="submit" class="btn btn-primary">Create & Broadcast</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer class="mt-5 py-4 border-top">
@@ -114,6 +255,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/app.js"></script>
-
   </body>
 </html>
