--- a/pages/login.html
+++ b/pages/login.html
@@ -166,9 +166,13 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/supabase.min.js"></script>
 <script>
+  import dotenv from 'dotenv';
+  import supabase from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/supabase.min.js';
+  dotenv.config();
+
   document.addEventListener('DOMContentLoaded', () => {
-    const supabaseUrl = 'https://peexuuzunrhbimpemdwz.supabase.co';
-    const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBlZXh1dXp1bnJoYmltcGVtZHd6Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjAxMzk3MjYsImV4cCI6MjA3NTcxNTcyNn0.sOOZfxsQvBF35vijxgO3K5nedKww0fyWKBXiebyfAB0';
+    const supabaseUrl = `postgresql://${process.env.user}:${process.env.password}@${process.env.host}:${process.env.port}/${process.env.dbname}`;
+    const supabaseAnonKey = process.env['API-KEY'];
     const supabase = supabase.createClient(supabaseUrl, supabaseAnonKey);
 
     console.log('Supabase initialized, trying to log in...');
