Added some DB functionality to the nav bar so that it reflects the logging in of a user

--- a/pages/student-dashboard.html
+++ b/pages/student-dashboard.html
@@ -29,8 +29,10 @@
         background-color: #f5f7fa;
       }
     </style>
+     <script src = "../nav.js"></script>
   </head>
   <body>
+  
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <script src = "../Dashboard.js"></script>
   
