--- a/pages/topic-detail.html
+++ b/pages/topic-detail.html
@@ -20,6 +20,7 @@
         background-color: #f5f7fa;
       }
     </style> 
+     <script src = "../nav.js"></script>
   </head>
   <body>
    <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom sticky-top">
