--- a/pages/tutor-dashboard.html
+++ b/pages/tutor-dashboard.html
@@ -19,6 +19,7 @@
         background-repeat: repeat, no-repeat;
         background-color: #f5f7fa;
       }</style>
+       <script src = "../nav.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom sticky-top">
