--- a/pages/profile.html
+++ b/pages/profile.html
@@ -10,6 +10,7 @@
     <link rel="icon" href="/assets/images/Favicon.png" type="image/x-icon">
   </head>
   <body>
+    <script src = "../nav.js"></script>
     <script type="module">
       import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
 
